hphp/hack/test/typecheck/union/shape_idx_refine_opt.php.like_types.exp
File "shape_idx_refine_opt.php", line 7, characters 19-20:
Invalid argument (Typing[4110])
File "shape_idx_refine_opt.php", line 7, characters 19-20:
Expected shape(?'a' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_refine_opt.php", line 3, characters 13-32:
But got dynamic because it is an unenforceable type
File "shape_idx_refine_opt.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "shape_idx_refine_opt.php", line 6, characters 22-22:
Expected ~shape('a' => ~int, ...)
File "shape_idx_refine_opt.php", line 3, characters 13-32:
But got shape(?'a' => ~?int)
File "shape_idx_refine_opt.php", line 14, characters 19-20:
Invalid argument (Typing[4110])
File "shape_idx_refine_opt.php", line 14, characters 19-20:
Expected shape(?'a' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_refine_opt.php", line 3, characters 13-32:
But got dynamic because it is an unenforceable type
File "shape_idx_refine_opt.php", line 15, characters 12-13:
Invalid return type (Typing[4110])
File "shape_idx_refine_opt.php", line 13, characters 23-23:
Expected ~shape('a' => ~int, ...)
File "shape_idx_refine_opt.php", line 3, characters 13-32:
But got shape(?'a' => ~?int)
